--- a/app/index.html
+++ b/app/index.html
@@ -9,5 +9,8 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script>
+   			global = globalThis
+		</script>
   </body>
 </html>
